# Defunc

./: Cargo.toml  LICENSE_MIT  README.md  tsconfig.json
Defunc/: package.json  tsconfig.json
Defunc/output/: defunc.js
Defunc/src/: index.tsx
Defunc/src/render/: index.ts
Defunc/types/: JSX.d.ts
Defuncjs/: ExampleComponent.js  index.js  renderer.js
src/: lib.rs
www_example/: index.html  index.js  package.json  performanceTests.js
