[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["joey.sharette <joey.sharette@monolythdesigns.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.62"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
